--- a/Q2/index.html
+++ b/Q2/index.html
@@ -20,6 +20,8 @@
                 <span id="createdBoardName">Kanban Board:</span>&nbsp;<span id="addnew" class="add-button" onclick="createNew()" style="background-color: #ddaf5e;">Edit Board</span>
             </h1>
             <small class="text-muted"><i>Double click to edit task description</i></small>
+            <br>
+            <small class="text-muted"><i>Note: You can only enter a maximum of 3 tasks in each column</i></small>
             <div class="row mt-2">
                 <div class="col-lg-3 col-md-6 mb-3">
                     <div class="card">
