Clean up q2's code

--- a/Q2/index.html
+++ b/Q2/index.html
@@ -19,7 +19,7 @@
             <h1>
                 <span id="createdBoardName">Kanban Board:</span>&nbsp;<span id="addnew" class="add-button" onclick="createNew()" style="background-color: #ddaf5e;">Edit Board</span>
             </h1>
-            <small class="text-muted"><i>Double click to edit task description</i></small>
+            <small class="text-muted"><i>Click to edit task description</i></small>
             <br>
             <small class="text-muted"><i>Note: You can only enter a maximum of 3 tasks in each column</i></small>
             <div class="row mt-2">
